syntax = "proto3";

package program_v3;

option go_package = "github.com/kirillmc/grpc_test_server/pkg/program_v3;program_v3";

service ProgramV3{
  rpc Get(GetRequest) returns (TrainPrograms);
  rpc Create(TrainPrograms) returns (Response);
  rpc Update(TrainPrograms) returns (Response);
  rpc Delete(DeleteRequest) returns (Response);
}
message GetRequest{
  int64 Count = 1;
}

message Set{
  int64 id = 1;
  int64 quantity = 2;
  double weight = 3;
}

message Exercise{
  int64 id = 1;
  string exercise_name = 2;
  repeated string pictures = 3;
  string description = 4;
  repeated Set sets = 5;
}

message TrainDay{
  int64 id = 1;
  string day_name = 2;
  string description = 3;
  repeated Exercise exercises = 4;
}

message TrainProgram{
  int64 id = 1;
  string program_name = 2;
  string description = 3;
  string status = 4;
  repeated TrainDay train_days = 5;
}

message TrainPrograms{
  repeated TrainProgram train_programs = 1;
}

message Response{
  string message = 1;
}

message DeleteRequest{
  int64 id = 1;
}